--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/setup-node@v4
       - run: sudo apt-get install build-essential
       - run: make setup
-      - run: make start
+      - run: make test
       - run: make lint
